feat: add get me route
